assets/css/block-editor-style.css
@font-face {
  font-family: "stag";
  src: url("../fonts/stag.eot");
  src: url("../fonts/stag.eot?#iefix") format("embedded-opentype"),
    url("../fonts/stag.woff") format("woff"),
    url("../fonts/stag.ttf") format("truetype"),
    url("../fonts/stag.svg#stag") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: optional;
}

/* Use the following CSS code if you want to use data attributes for inserting your icons */
[data-icon]:before {
  font-family: "stag";
  content: attr(data-icon);
  speak: none;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

/* Use the following CSS code if you want to have a class per icon */
/*
Instead of a list of all class selectors,
you can use the generic selector below, but it's slower:
[class*="icon-"] {
*/
.icon-testimonial,
.icon-service-rocket,
.icon-service-pixel,
.icon-service-glass,
.icon-service-cog,
.icon-previous,
.icon-next,
.icon-grid,
.icon-eye,
.icon-article,
.icon-quote,
.icon-minus,
.icon-plus,
.icon-youtube,
.icon-soundcloud,
.icon-myspace,
.icon-instagram,
.icon-flickr,
.icon-deviantart,
.icon-behance,
.icon-vimeo,
.icon-twitter,
.icon-rss,
.icon-pinterest,
.icon-linkedin,
.icon-forrst,
.icon-google-plus,
.icon-facebook,
.icon-email,
.icon-dribbble {
  font-family: "stag";
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
.icon-testimonial:before {
  content: "\e000";
}
.icon-service-rocket:before {
  content: "\e001";
}
.icon-service-pixel:before {
  content: "\e002";
}
.icon-service-glass:before {
  content: "\e003";
}
.icon-service-cog:before {
  content: "\e004";
}
.icon-previous:before {
  content: "\e005";
}
.icon-next:before {
  content: "\e006";
}
.icon-grid:before {
  content: "\e007";
}
.icon-eye:before {
  content: "\e008";
}
.icon-article:before {
  content: "\e009";
}
.icon-quote:before {
  content: "\e00a";
}
.icon-minus:before {
  content: "\e00b";
}
.icon-plus:before {
  content: "\e00c";
}
.icon-youtube:before {
  content: "\e00d";
}
.icon-soundcloud:before {
  content: "\e00e";
}
.icon-myspace:before {
  content: "\e00f";
}
.icon-instagram:before {
  content: "\e010";
}
.icon-flickr:before {
  content: "\e011";
}
.icon-deviantart:before {
  content: "\e012";
}
.icon-behance:before {
  content: "\e013";
}
.icon-vimeo:before {
  content: "\e014";
}
.icon-twitter:before {
  content: "\e015";
}
.icon-rss:before {
  content: "\e016";
}
.icon-pinterest:before {
  content: "\e017";
}
.icon-linkedin:before {
  content: "\e018";
}
.icon-forrst:before {
  content: "\e019";
}
.icon-google-plus:before {
  content: "\e01a";
}
.icon-facebook:before {
  content: "\e01b";
}
.icon-email:before {
  content: "\e01c";
}
.icon-dribbble:before {
  content: "\e01d";
}

.edit-post-layout__content {
  background-color: var(--style-background-color, #ffffff);
}

.edit-post-visual-editor .editor-block-list__block {
  margin: 0 auto;
  max-width: 770px;
}

.editor-post-title,
.editor-post-title .editor-post-title__input {
  line-height: 1.2;
  max-width: 840px !important;
  font-family: var(--font-header);
  word-wrap: break-word;
  background-color: var(--style-background-color, #ffffff);
}

.edit-post-visual-editor,
.edit-post-visual-editor p {
  font-size: 17px;
  font-family: var(--font-body, "Noto Serif");
}

.edit-post-visual-editor h1,
.edit-post-visual-editor h2,
.edit-post-visual-editor h3,
.edit-post-visual-editor h4,
.edit-post-visual-editor h5,
.edit-post-visual-editor h6 {
  font-weight: bold;
  font-family: var(--font-header, "Noto Serif");
  color: #363f48;
}

.edit-post-visual-editor h1 {
  font-size: 45px;
  letter-spacing: -2.6px;
  line-height: 1.1667em;
}

.edit-post-visual-editor h2 {
  font-size: 25px;
  line-height: 1.4em;
  margin: 0 0 1em 0;
}

.edit-post-visual-editor h3 {
  font-size: 23px;
  line-height: 1.429em;
  margin: 0 0 0.5em 0;
}

.edit-post-visual-editor h4 {
  font-size: 22px;
  line-height: 1.2857em;
}

.edit-post-visual-editor h5 {
  font-size: 18px;
  line-height: 1.5em;
}

.edit-post-visual-editor h6 {
  font-size: 15px;
  line-height: 1.6em;
}

.edit-post-visual-editor a {
	text-decoration: none;
	color: var(--accent-color, #1bbc9b);
  }

  h1 a,
  h2 a,
  h3 a,
  h4 a,
  h5 a,
  h6 a {
	text-decoration: none;
	color: inherit;
  }
  .edit-post-visual-editor .editor-block-list__block h1 a:visited,
  .edit-post-visual-editor .editor-block-list__block h2 a:visited,
  .edit-post-visual-editor .editor-block-list__block h3 a:visited,
  .edit-post-visual-editor .editor-block-list__block h4 a:visited,
  .edit-post-visual-editor .editor-block-list__block h5 a:visited,
  .edit-post-visual-editor .editor-block-list__block h6 a:visited {
	color: inherit;
  }

.edit-post-visual-editor .wp-block-quote:not(.is-large) {
  padding-left: 100px;
}

.edit-post-visual-editor blockquote {
  border: 0 !important;
  font-size: 20px;
  background: #363f48;
  color: #fff;
  margin: 30px 0;
  padding: 20px 20px 20px 100px;
  position: relative;
  min-height: 90px;
}
.edit-post-visual-editor blockquote p {
  margin: 0;
  font-size: 20px;
  color: #fff;
  margin-bottom: 1em;
}

.edit-post-visual-editor blockquote cite {
  color: #fff;
}

.wp-block-pullquote {
  border: none;
  text-align: left;
  background: #363f48;
  color: #fff;
  margin: 30px 0;
  padding: 20px 20px 20px 100px;
  position: relative;
}

.wp-block-pullquote cite {
  color: inherit;
}

.edit-post-visual-editor blockquote::before,
.wp-block-pullquote:before {
  font-family: "stag";
  content: "\e00a";
  speak: none;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  position: absolute;
  top: 28px;
  left: 25px;
}

.wp-block-quote.is-large, .wp-block-quote.is-style-large {
	padding: 30px 30px 30px 100px;
}

.wp-block-quote.is-large:before, .wp-block-quote.is-style-large:before {
  top: 40px;
}

